# MarcFly-Learngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  MarcFly_Learngine.sln  README.md  Readme.md  defaults.lua  premake5.lua
MarcFly_Learngine_LIB/: MarcFly_Learngine_LIB.vcxproj  premake5.lua
MarcFly_Learngine_LIB/premakefiles/: crosswindow.lua  flecs.lua
MarcFly_Learngine_LIB/src/: main.cpp
build_tools/: Build_Readme.md  Windows_Debug.bat  Windows_Release.bat
docs/: 404.html  data.json  feed.xml  index.html  search.html  sitemap.xml
docs/folder1/: index.html
docs/folder1/folder2/: index.html
docs/folder1/folder2/folder1/: index.html
docs/folder2/: index.html
docs/folder2/folder1/: index.html
engine/: main.cpp
engine/mfly_gpu/: mfly_gpu.cpp  mfly_gpu.h  mfly_gpu.hpp
engine/mfly_shaders/: mfly_shaders.cpp  mfly_shaders.hpp
engine/mfly_vk/: mfly_vk.cpp  mfly_vk.hpp
engine/mfly_vk/types/: vk_buffers.cpp  vk_buffers.h  vk_cmds.cpp  vk_cmds.h  vk_gfx_pipe.cpp  vk_gfx_pipe.h  vk_images.cpp  vk_images.h  vk_init_types.cpp  vk_init_types.h  vk_renderpass.cpp  vk_renderpass.h  vk_shaders.cpp  vk_shaders.h
engine/mfly_window/: mfly_window.cpp  mfly_window.hpp
engine/module_template/: module_template.cpp  module_template.hpp
jekyll_page/: Gemfile  _config.yml  index.md
jekyll_page/_posts/: 2022-07-16-PluginSystem.md  2022-08-03-Vulkan_PresentationModes_Swapchain.md  2022-08-06-Vulkan_Resources_Descriptors.md  2022-08-12-CommandBuffers.md  2022-09-02-Pipeline.md
jekyll_page/pages/: changelog.md  todo.md
libs/: CMakeLists.txt  mfly_globals.h
libs/mfly_plugin/: mfly_dlloading.h
libs/mfly_slotmap/: mfly_slotmap.h
libs/mfly_tasker/: mfly_tasker.cpp  mfly_tasker.h
libs/mfly_tasker/example/: CMakelists.txt  base_test.cpp
libs/sque_timer/: sque_timer.h
submodules/CrossWindow-Graphics/src/CrossWindow/Graphics/: Vulkan.h
submodules/CrossWindow/src/CrossWindow/Win32/: Win32Window.cpp
